--- a/src/main/resources/templates/user/user-task.html
+++ b/src/main/resources/templates/user/user-task.html
@@ -74,7 +74,7 @@
                     <!-- Title -->
                     <td class="p-3 border-b">
                         <a th:if="${task.projectId != null}"
-                           th:href="@{'/view/pm/project/board?projectId=' + ${task.projectId}}"x
+                           th:href="@{'/view/pm/project/board?projectId=' + ${task.projectId}}"
                            class="text-blue-600 hover:text-blue-800 font-medium underline-offset-2 hover:underline">
                             <span th:text="${task.title}"></span>
                         </a>
